CMAKE_MINIMUM_REQUIRED(VERSION 3.6.0)

PROJECT(mephisto-tests)

SET(ALPAKA_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(ALPAKA_ROOT "${CMAKE_CURRENT_LIST_DIR}/../alpaka" CACHE STRING "The location of the alpaka library")
LIST(APPEND CMAKE_MODULE_PATH "${ALPAKA_ROOT}")

FIND_PACKAGE("alpaka" REQUIRED)
FIND_PACKAGE(DASH-MPI)

INCLUDE("${ALPAKA_ROOT}/cmake/common.cmake")
#INCLUDE("${ALPAKA_ROOT}/cmake/dev.cmake")

IF(CMAKE_VERSION VERSION_LESS 3.7.0)
    INCLUDE_DIRECTORIES(
        ${alpaka_INCLUDE_DIRS})
    ADD_DEFINITIONS(
        ${alpaka_DEFINITIONS})
ENDIF()

#ALPAKA_ADD_EXECUTABLE(
#    foo
#    "foo.cpp")
#TARGET_LINK_LIBRARIES(
#    foo
#    PUBLIC "alpaka")


IF(DASH-MPI_FOUND)
    MESSAGE(STATUS "Found DASH: ${DASH_INSTALL_PREFIX} (found version ${DASH_VERSION_MAJOR}.${DASH_VERSION_MINOR}.${DASH_VERSION_PATCH})")
    set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${DASH_CXX_FLAGS} ${CXX_FLAGS}" )
ENDIF()

ADD_SUBDIRECTORY("../gtest" "${PROJECT_BINARY_DIR}/testing")
ADD_SUBDIRECTORY("t/")
